update2.index.html

--- a/index.html
+++ b/index.html
@@ -32,22 +32,22 @@
 			<div id="navbarCollapse" class="collapse navbar-collapse">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item">
-						<a href="#" class="nav-link active">
+						<a href="#yek" class="nav-link active">
 							Home
 						</a>
 					</li>
 					<li class="nav-item">
-						<a href="#" class="nav-link active">
+						<a href="#du" class="nav-link active">
 							About
 						</a>
 					</li>
 					<li class="nav-item">
-						<a href="#" class="nav-link active">
+						<a href="#se" class="nav-link active">
 							Services
 						</a>
 					</li>
 					<li class="nav-item">
-						<a href="#" class="nav-link active">
+						<a href="#car" class="nav-link active">
 							Contact
 						</a>
 					</li>
@@ -89,7 +89,7 @@
 					<div class="card mb-4">
 						<img src="" class="card-img-top img-thumbnail" alt="">
 						<div class="card-body">
-							<h4 class="card-title">Post Title</h4>
+							<h4 class="card-title">Who I Am?</h4>
 							<p class="card-text">
 								Hi my name is Batıkan I graduated at Marmara College in 25 July 2022 my departman is local goverment (Bachelor) 
                                 <br>
@@ -108,7 +108,7 @@
 					<div class="card mb-4">
 						<img src="image/team2.jpg" class="card-img-top img-thumbnail" alt="">
 						<div class="card-body">
-							<h4 class="card-title">Post Title</h4>
+							<h4 class="card-title">The Post of Projects </h4>
 							<p class="card-text">
                                 There are a lot of project about different field. Especially field of the technology and administration/management. 
                                 So I improve own severely field and ı carry on this development become hybrid    
@@ -122,8 +122,8 @@
 
 					<div class="card mb-4">
 						<img src="image/comunicate.jpg" class="card-img-top img-thumbnail" alt="">
-						<div class="card-body">
-							<h4 class="card-title">Post Title</h4>
+						<div id="car" class="card-body">
+							<h4 class="card-title">How I Can Contact You</h4>
 							<p class="card-text">
 								Those are my comunucated way 
                                 <br>
